Adicionado a documentação das rotas da API usando o Swagger
