# routes/api.php
@@ -37,7 +37,8 @@ Route::group(['middleware'=>'cors'], function(){
         Route::get('/search', 'Api\SearchController@results')->name('api.search.results');
 
         /* Users */
-        Route::resource('users', 'Api\UserController');
+        //Route::resource('users', 'Api\UserController');
+        Route::get('users/{email}', 'Api\UserController@show')->name('api.users.show');
         Route::get('users/{email}/status', 'Api\UserController@getStatus')->name('api.users.getstatus');
         Route::get('myself', 'Api\UserController@myself')->name('api.myself');
         
@@ -48,13 +49,15 @@ Route::group(['middleware'=>'cors'], function(){
         Route::post('friends/leavefriendship/{email}', 'Api\FriendController@getAdd')->name('api.friends.leave');
 
         /* Places */
-        Route::get('places', 'Api\PlaceController@index')->name('api.places.index');
+        //Route::get('places', 'Api\PlaceController@index')->name('api.places.index');
         Route::get('/places/show', 'Api\PlaceController@show')->name('api.place.show');
 
         /* Routes */
         Route::get('routes', 'Api\RouteController@index')->name('api.routes.index');
         Route::post('routes', 'Api\RouteController@store')->name('api.routes.store');
         Route::get('/routes/show/{id}', 'Api\RouteController@show')->name('api.route.show');
+        Route::delete('/routes/delete/{id}', 'Api\RouteController@destroy')->name('api.route.delete');
+        Route::get('/routes/addToRoute', 'Api\RouteController@addToRoute')->name('api.route.addToRoute');
 
     });
 
