# storage/api-docs/api-docs.json
@@ -16,12 +16,141 @@
         "https"
     ],
     "paths": {
+        "/api/login": {
+            "post": {
+                "tags": [
+                    "login"
+                ],
+                "summary": "get a JWT token for a user.",
+                "description": "get a JWT token for a user.",
+                "operationId": "api.auth",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "body",
+                        "description": "Email used by user",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewUser"
+                        },
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "body",
+                        "description": "Password used by user",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewUser"
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - respond with a JWT Token"
+                    },
+                    "401": {
+                        "description": "Invalid Credentials."
+                    },
+                    "500": {
+                        "description": "Could not create token"
+                    }
+                }
+            }
+        },
+        "/api/getuser": {
+            "get": {
+                "tags": [
+                    "login"
+                ],
+                "summary": "Get the user by token - For Tests only.",
+                "description": "get a user by JWT Token - for tests only.",
+                "operationId": "api.getuser",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Email used by user",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - respond with a JWT Token"
+                    },
+                    "404": {
+                        "description": "User not found."
+                    }
+                }
+            }
+        },
+        "/api/register": {
+            "post": {
+                "tags": [
+                    "login"
+                ],
+                "summary": "Handle a registration request for the application.",
+                "description": "Handle a registration request for the application",
+                "operationId": "api.register",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "body",
+                        "description": "Fullname used by user",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewUser"
+                        },
+                        "type": "string"
+                    },
+                    {
+                        "name": "email",
+                        "in": "body",
+                        "description": "Email used by user",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewUser"
+                        },
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "body",
+                        "description": "Password used by user",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewUser"
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - respond with a JWT Token"
+                    },
+                    "409": {
+                        "description": "User already exists."
+                    }
+                }
+            }
+        },
         "/api/friends": {
             "get": {
                 "tags": [
                     "friends"
                 ],
-                "summary": "Display a listing of the resource.",
+                "summary": "Display a listing of friends.",
                 "description": "Returns friends.",
                 "operationId": "api.friends.index",
                 "produces": [
@@ -120,7 +249,7 @@
                 "tags": [
                     "friends"
                 ],
-                "summary": "Accept a friendship request.",
+                "summary": "Leave a Friendship.",
                 "description": "Leave a friendship.",
                 "operationId": "api.friends.leave",
                 "produces": [
@@ -153,7 +282,7 @@
                 "tags": [
                     "places"
                 ],
-                "summary": "Display the specified resource.",
+                "summary": "Display the specified place.",
                 "description": "Returns place details.",
                 "operationId": "api.places.show",
                 "produces": [
@@ -181,11 +310,175 @@
                 }
             }
         },
+        "/api/routes": {
+            "get": {
+                "tags": [
+                    "routes"
+                ],
+                "summary": "Display a listing of the routes.",
+                "description": "Returns the user's routes.",
+                "operationId": "api.routes.index",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - User found and return Routes."
+                    },
+                    "404": {
+                        "description": "User not found."
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "routes"
+                ],
+                "summary": "Store a newly created route in storage.",
+                "description": "Store a user's new route.",
+                "operationId": "api.routes.store",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "body",
+                        "description": "Name of the new Route",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewRoute"
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - User found and will save the Route."
+                    },
+                    "404": {
+                        "description": "User not found."
+                    }
+                }
+            }
+        },
+        "/api/routes/show/{id}": {
+            "get": {
+                "tags": [
+                    "routes"
+                ],
+                "summary": "Display the specified route.",
+                "description": "Returns the route details.",
+                "operationId": "api.routes.show",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Route id in database",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - Route found."
+                    },
+                    "404": {
+                        "description": "Route not found."
+                    }
+                }
+            }
+        },
+        "/api/routes/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "routes"
+                ],
+                "summary": "Remove the specified route from storage.",
+                "description": "Delete the specified route.",
+                "operationId": "api.routes.delete",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Route id in database",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - Route found."
+                    },
+                    "404": {
+                        "description": "Route not found."
+                    }
+                }
+            }
+        },
+        "/api/routes/addToRoute": {
+            "get": {
+                "tags": [
+                    "routes"
+                ],
+                "summary": "Add a item into a route.",
+                "description": "Adds an Item to specified route.",
+                "operationId": "api.routes.addToRoute",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "routeId",
+                        "in": "body",
+                        "description": "Route id in database",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewRoute"
+                        },
+                        "type": "string"
+                    },
+                    {
+                        "name": "google_place_id",
+                        "in": "body",
+                        "description": "Google place - id",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewPlace"
+                        },
+                        "type": "string"
+                    },
+                    {
+                        "name": "name",
+                        "in": "body",
+                        "description": "Google place - name",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewPlace"
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - Add to Route."
+                    },
+                    "404": {
+                        "description": "Route not found."
+                    }
+                }
+            }
+        },
         "/api/search": {
             "get": {
                 "tags": [
-                    "search",
-                    "users"
+                    "search"
                 ],
                 "summary": "Display results of a search query",
                 "description": "Returns results of a search query.",
@@ -211,6 +504,87 @@
                     },
                     "400": {
                         "description": "no input query."
+                    }
+                }
+            }
+        },
+        "/api/users/{email}": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Display the specified user.",
+                "description": "Returns the user details.",
+                "operationId": "api.users.show",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "description": "Email used by user",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - User found."
+                    },
+                    "404": {
+                        "description": "User not found."
+                    }
+                }
+            }
+        },
+        "/api/users/{email}/status": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Display the statuses of a specified user.",
+                "description": "Returns the statuses of a specified user.",
+                "operationId": "api.users.getstatus",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "description": "Email used by user",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - User found."
+                    },
+                    "404": {
+                        "description": "User not found."
+                    }
+                }
+            }
+        },
+        "/api/myself": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Display the user from JWT Token.",
+                "description": "Returns the user from JWT Token.",
+                "operationId": "api.myself",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success - User found."
+                    },
+                    "404": {
+                        "description": "User not found."
                     }
                 }
             }
@@ -250,6 +624,37 @@
                 }
             }
         },
+        "NewItem": {
+            "required": [
+                "place_id",
+                "route_id"
+            ],
+            "properties": {
+                "place_id": {
+                    "description": "Place id in database",
+                    "type": "integer"
+                },
+                "route_id": {
+                    "description": "Route id in database",
+                    "type": "integer"
+                }
+            }
+        },
+        "Item": {
+            "allOf": [
+                {
+                    "$ref": "#/definitions/NewItem"
+                },
+                {
+                    "$ref": "#/definitions/Timestamps"
+                },
+                {
+                    "required": [
+                        "id"
+                    ]
+                }
+            ]
+        },
         "NewPlace": {
             "required": [
                 "google_place_id",
@@ -272,6 +677,38 @@
             "allOf": [
                 {
                     "$ref": "#/definitions/NewPlace"
+                },
+                {
+                    "$ref": "#/definitions/Timestamps"
+                },
+                {
+                    "required": [
+                        "id"
+                    ]
+                }
+            ]
+        },
+        "NewRoute": {
+            "required": [
+                "name",
+                "user_id"
+            ],
+            "properties": {
+                "name": {
+                    "description": "Route's full name",
+                    "type": "string",
+                    "example": "Rota de teste"
+                },
+                "user_id": {
+                    "description": "User's id in database",
+                    "type": "integer"
+                }
+            }
+        },
+        "Route": {
+            "allOf": [
+                {
+                    "$ref": "#/definitions/NewRoute"
                 },
                 {
                     "$ref": "#/definitions/Timestamps"
